// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a rolling date filter 1`] = `
<ul
  className="FilterList"
>
  <li
    className="listItem"
    key="0"
  >
    <ActionItem
      onClick={[Function]}
    >
      <span
        className="parameterName"
      >
        Start Date
         
      </span>
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "is less than <span class='previewItemValue'>18 hours</span> ago",
          }
        }
      />
    </ActionItem>
  </li>
</ul>
`;

exports[`should display a start date filter 1`] = `
<ul
  className="FilterList"
>
  <li
    className="listItem"
    key="0"
  >
    <ActionItem
      onClick={[Function]}
    >
      <span
        className="parameterName"
      >
        Start Date
      </span>
      <span>
         
        is between
         
      </span>
      <span
        className="previewItemValue"
      >
        2017-11-16
      </span>
      <span>
         
        and
         
      </span>
      <span
        className="previewItemValue"
      >
        2017-11-26
      </span>
    </ActionItem>
  </li>
</ul>
`;
